--- a/src/component/Home.css
+++ b/src/component/Home.css
@@ -11,6 +11,8 @@ body {
   width: 100%;
   display: flex;
   flex-direction: column;
+  margin: 0;
+  padding: 0;
 }
 
 .backimage {
